--- a/index.html
+++ b/index.html
@@ -1,10 +1,13 @@
-<html>
-<head>
-
+<!DOCTYPE html>
+<html lang="en-us"><head>
+  <head>
+  <meta charset="utf-8">
+  <title>Potato</title>
+  <meta name="description" content="All about potatoes">
+  <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
-
   <!-- ============= Header ============= -->
   <header>
     <div class="logo"> </div>
@@ -23,8 +26,8 @@
   <!-- ============= Home ============= -->
   <section class="home">
     <hgroup>
-      <h1> </h1>
-      <h2> </h2>
+      <h1>"Sweet, Nutritious and Delicious" </h1>
+      <h2>The key to happiness is hidden in the <img src="logo"></h2>
     </hgroup>
     <img src="#" class="hero">
   </section>
