--- a/index.html
+++ b/index.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
-<html lang="en-us"><head>
+<html lang="en-us">
+<link rel="stylesheet" href="css/style.css">
   <head>
   <meta charset="utf-8">
   <title>Potato</title>
   <meta name="description" content="All about potatoes">
-  <link rel="stylesheet" href="style.css">
+
 </head>
 
 <body>
@@ -13,12 +14,12 @@
     <div class="logo"> </div>
     <nav>
       <ul>
-        <li>Home</li>
-        <li>About</li>
-        <li>Nutrition</li>
-        <li>Features</li>
-        <li>Testimonials</li>
-        <li>Order</li>
+        <li><a href="#">Home</a></li>
+        <li><a href="#">About</a></li>
+        <li><a href="#">Nutrition</a></li>
+        <li><a href="#">Features</a></li>
+        <li><a href="#">Testimonials</a></li>
+        <li><a class="buy-now" href="#">Buy It Now</a></li>
       </ul>
     </nav>
   </header>
