fill out markup

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
   <!-- ============= Header ============= -->
   <header>
-    <div class="logo"> </div>
+    <div><p>Potato&trade</p></div>
     <nav>
       <ul>
         <li><a href="#">Home</a></li>
@@ -23,15 +23,106 @@
       </ul>
     </nav>
   </header>
+<! HOME PAGE STARTS!>
 
-  <!-- ============= Home ============= -->
   <section class="home">
+    <img scr="/assets/images/potato/1/bg.jpg">
     <hgroup>
       <h1>"Sweet, Nutritious and Delicious" </h1>
-      <h2>The key to happiness is hidden in the <img src="logo"></h2>
+      <p>The key to happiness is hidden in the <span><p>Potato&trade</p></span></p>
     </hgroup>
     <img src="#" class="hero">
   </section>
+<! PAGE TWO SHAPES AND SIZES STARTS!>
+
+<section class="shapes">
+  <img scr="/assets/images/potato/2/bg.jpg">
+  <hgroup>
+    <h1>Different shapes and sizes </h1>
+    <p><span><p>Potato&trade</p></span>comes in many different unique shapes and sizes.
+      Find the one that fits your personal preferences.<p>
+  </hgroup>
+  <img src="#" class="hero">
+</section>
+<!==PAGE THREE HEALTHY STARTS!!>
+<section class="healthy">
+  <img scr="/assets/images/potato/3/bg.jpg">
+  <hgroup>
+    <h1>Is <span><p>Potato&trade</p></span> healthy? Yes it is! </h1>
+    <p>The majority of carbodydrates in potatoes are complex carbohydrates, your body's main energy source.</p>
+  </hgroup>
+  <img src="#" class="hero">
+<ul>
+  <li>110 calories</li>
+  <li>26g carbohydrates</li>
+  <li>3g protein</li>
+  <li>0g fat</li>
+</ul>
+</section>
+<!===PAGE FOUR EASY TRANSFORM STARTS===!>
+<section class="transform">
+  <img scr="/assets/images/potato/4/bg.jpg">
+  <hgroup>
+    <h1>Easily Transformable</h1>
+    <p>Because of its unique structure, <span><p>Potato&trade</p></span>is easily usable
+      and transformable in any form you can think of.</p>
+  </hgroup>
+  <img src="#" class="hero">
+<!===PAGE FIVE SATISFACTION START===!>
+<section class="satisfaction">
+  <hgroup>
+    <h1>100% Customer satisfaction!</h1>
+    <blockquote><p>"I was a skeptic at first, but when I tried the Potato for the first time,
+       my life has completely changed! I'm a better person now. Everything is better with
+      the Potato."</p>
+    <footer>--Jane Doe, single mom</footer>
+  </blockquote>
+  </hgroup>
+  <img src="#" class="hero">
+  <!===PAGE SIX ORDER PAGE==!>
+  <section class="order">
+    <hgroup>
+      <h1>Order one (or more) today!</h1>
+      <div><ul>
+        <h2>Potato&trade Lite</h2>
+          <li>Small and compact</li>
+          <li>Highly portable</li>
+          <li>Unapologetically delicious</li>
+          <ul>
+            <div class rel="button" href="Order">
+            <p>starting at $9.99</p></div></div>
+        <h2>Potato&trade Pro</h2>
+          <li>Highly portable</li>
+          <li>Easily sliceable</li>
+          <li>Unapologetically delicious</li>
+          <li>Highly nutritious</li>
+          <ul>
+            <div class rel="button" href="Order">
+            <p>starting at $19.99</p></div></div>
+              <div>
+        <h2>Potato&trade Team</h2>
+          <li>Ideal for bigger groups</li>
+          <li>Easily sliceable</li>
+          <li>Unapologetically delicious</li>
+          <li>Very nutritious</li>
+          <ul>
+            <div class rel="button" href="Order">
+              <p>starting at $39.99</p></div></div>
+    </hgroup>
+    <img src="#" class="hero">
+    <!===FOOTER STARTS====!>
+    <div><footer>
+      <div><p>Since you came here to read this, have one IMAGE TK for free!
+        Copyright 2015 Potato&trade All rights reserved.</p><div>
+    <div><nav>
+      <ul>
+        <li>History</li>
+        <li>About</li>
+        <li>Contact us</li>
+        <li>Free Potato</li>
+      </ul>
+    </nav></div>
+  </footer>
 
 </body>
 </html>
