fix home page layout

--- a/index.html
+++ b/index.html
@@ -10,8 +10,10 @@
 
 <body>
   <!-- ============= Header ============= -->
-  <header>
-    <div><p>Potato&trade</p></div>
+<!-- HOME PAGE STARTS -->
+  <section id="home">
+    <header>
+          <p>Potato&trade;</p>
     <nav>
       <ul>
         <li><a href="#">Home</a></li>
@@ -23,35 +25,29 @@
       </ul>
     </nav>
   </header>
-<! HOME PAGE STARTS!>
-
-  <section class="home">
-    <img scr="/assets/images/potato/1/bg.jpg">
-    <hgroup>
-      <h1>"Sweet, Nutritious and Delicious" </h1>
-      <p>The key to happiness is hidden in the <span><p>Potato&trade</p></span></p>
-    </hgroup>
-    <img src="#" class="hero">
+    <div>
+      <h1>"Sweet, Nutritious and Delicious"</h1>
+      <p>The key to happiness is hidden in the <span>Potato&trade;</span>.</p>
+    </div>
   </section>
-<! PAGE TWO SHAPES AND SIZES STARTS!>
+<!-- PAGE TWO SHAPES AND SIZES STARTS -->
 
-<section class="shapes">
-  <img scr="/assets/images/potato/2/bg.jpg">
+<section id="shapes">
+  <img scr="assets/images/potato/2/blur.png">
   <hgroup>
     <h1>Different shapes and sizes </h1>
-    <p><span><p>Potato&trade</p></span>comes in many different unique shapes and sizes.
+    <p><span><p>Potato&trade;</p></span>comes in many different unique shapes and sizes.
       Find the one that fits your personal preferences.<p>
   </hgroup>
-  <img src="#" class="hero">
 </section>
-<!==PAGE THREE HEALTHY STARTS!!>
-<section class="healthy">
+
+<!--PAGE THREE HEALTHY STARTS -->
+<section id="healthy">
   <img scr="/assets/images/potato/3/bg.jpg">
   <hgroup>
-    <h1>Is <span><p>Potato&trade</p></span> healthy? Yes it is! </h1>
+    <h1>Is <span><p>Potato&trade;</p></span> healthy? Yes it is! </h1>
     <p>The majority of carbodydrates in potatoes are complex carbohydrates, your body's main energy source.</p>
   </hgroup>
-  <img src="#" class="hero">
 <ul>
   <li>110 calories</li>
   <li>26g carbohydrates</li>
@@ -59,17 +55,18 @@
   <li>0g fat</li>
 </ul>
 </section>
-<!===PAGE FOUR EASY TRANSFORM STARTS===!>
-<section class="transform">
+
+<!--PAGE FOUR EASY TRANSFORM STARTS-->
+<section id="transform">
   <img scr="/assets/images/potato/4/bg.jpg">
   <hgroup>
     <h1>Easily Transformable</h1>
     <p>Because of its unique structure, <span><p>Potato&trade</p></span>is easily usable
       and transformable in any form you can think of.</p>
   </hgroup>
-  <img src="#" class="hero">
-<!===PAGE FIVE SATISFACTION START===!>
-<section class="satisfaction">
+
+<!-- PAGE FIVE SATISFACTION START-->
+<section id="satisfaction">
   <hgroup>
     <h1>100% Customer satisfaction!</h1>
     <blockquote><p>"I was a skeptic at first, but when I tried the Potato for the first time,
@@ -78,9 +75,9 @@
     <footer>--Jane Doe, single mom</footer>
   </blockquote>
   </hgroup>
-  <img src="#" class="hero">
-  <!===PAGE SIX ORDER PAGE==!>
-  <section class="order">
+
+  <!--PAGE SIX ORDER PAGE-->
+  <section id="order">
     <hgroup>
       <h1>Order one (or more) today!</h1>
       <div><ul>
@@ -91,6 +88,8 @@
           <ul>
             <div class rel="button" href="Order">
             <p>starting at $9.99</p></div></div>
+<div><figure id="divider">
+  <img src="/assets/images/potato/4/devider.png"></div>
         <h2>Potato&trade Pro</h2>
           <li>Highly portable</li>
           <li>Easily sliceable</li>
@@ -99,6 +98,8 @@
           <ul>
             <div class rel="button" href="Order">
             <p>starting at $19.99</p></div></div>
+            <div><figure class="divider">
+              <img src="/assets/images/potato/4/devider.png"></div>
               <div>
         <h2>Potato&trade Team</h2>
           <li>Ideal for bigger groups</li>
@@ -109,7 +110,7 @@
             <div class rel="button" href="Order">
               <p>starting at $39.99</p></div></div>
     </hgroup>
-    <img src="#" class="hero">
+
     <!===FOOTER STARTS====!>
     <div><footer>
       <div><p>Since you came here to read this, have one IMAGE TK for free!
