--- a/index.html
+++ b/index.html
@@ -13,21 +13,21 @@
 <!-- HOME PAGE STARTS -->
   <section id="home">
     <header>
-          <p>Potato&trade;</p>
+          <div id="logo">Potato&trade;</div>
     <nav>
       <ul>
-        <li><a href="#">Home</a></li>
-        <li><a href="#">About</a></li>
-        <li><a href="#">Nutrition</a></li>
-        <li><a href="#">Features</a></li>
-        <li><a href="#">Testimonials</a></li>
-        <li><a class="buy-now" href="#">Buy It Now</a></li>
+        <li><a href="#Home">Home</a></li>
+        <li><a href="#About">About</a></li>
+        <li><a href="#Nutrition">Nutrition</a></li>
+        <li><a href="#Features">Features</a></li>
+        <li><a href="#Testimonials">Testimonials</a></li>
+        <li><a class="buy-now" href="#Buy It Now">Buy It Now</a></li>
       </ul>
     </nav>
   </header>
     <div>
       <h1>"Sweet, Nutritious and Delicious"</h1>
-      <p>The key to happiness is hidden in the <span>Potato&trade;</span>.</p>
+      <p>The key to happiness is hidden in the  <span>Potato&trade;</span>.</p>
     </div>
   </section>
 <!-- PAGE TWO SHAPES AND SIZES STARTS -->
@@ -71,7 +71,7 @@
     <h1>100% Customer satisfaction!</h1>
     <blockquote><p>"I was a skeptic at first, but when I tried the Potato for the first time,
        my life has completely changed! I'm a better person now. Everything is better with
-      the Potato."</p>
+      the Potato&trade;."</p>
     <footer>--Jane Doe, single mom</footer>
   </blockquote>
   </hgroup>
@@ -81,7 +81,7 @@
     <hgroup>
       <h1>Order one (or more) today!</h1>
       <div><ul>
-        <h2>Potato&trade Lite</h2>
+        <h2>Potato&trade; Lite</h2>
           <li>Small and compact</li>
           <li>Highly portable</li>
           <li>Unapologetically delicious</li>
@@ -90,7 +90,7 @@
             <p>starting at $9.99</p></div></div>
 <div><figure id="divider">
   <img src="/assets/images/potato/4/devider.png"></div>
-        <h2>Potato&trade Pro</h2>
+        <h2>Potato&trade; Pro</h2>
           <li>Highly portable</li>
           <li>Easily sliceable</li>
           <li>Unapologetically delicious</li>
@@ -101,7 +101,7 @@
             <div><figure class="divider">
               <img src="/assets/images/potato/4/devider.png"></div>
               <div>
-        <h2>Potato&trade Team</h2>
+        <h2>Potato&trade; Team</h2>
           <li>Ideal for bigger groups</li>
           <li>Easily sliceable</li>
           <li>Unapologetically delicious</li>
@@ -111,19 +111,21 @@
               <p>starting at $39.99</p></div></div>
     </hgroup>
 
-    <!===FOOTER STARTS====!>
+    <!--FOOTER STARTS-->
     <div><footer>
       <div><p>Since you came here to read this, have one IMAGE TK for free!
-        Copyright 2015 Potato&trade All rights reserved.</p><div>
-    <div><nav>
+        Copyright 2015 Potato&trade All rights reserved.</p></div>
+<div>
+      <nav>
       <ul>
         <li>History</li>
         <li>About</li>
         <li>Contact us</li>
         <li>Free Potato</li>
       </ul>
-    </nav></div>
+    </nav>
+  </div>
   </footer>
-
+<link rel="styles" href="js/script.js">
 </body>
 </html>
