start applying flexbox to css

--- a/index.html
+++ b/index.html
@@ -28,25 +28,26 @@
     <div>
       <h1>"Sweet, Nutritious and Delicious"</h1>
       <p>The key to happiness is hidden in the  <span>Potato&trade;</span>.</p>
+<img src="assets/images/potato/1/potato1.png">
     </div>
   </section>
 <!-- PAGE TWO SHAPES AND SIZES STARTS -->
 
 <section id="shapes">
-  <img scr="assets/images/potato/2/blur.png">
   <hgroup>
-    <h1>Different shapes and sizes </h1>
-    <p><span><p>Potato&trade;</p></span>comes in many different unique shapes and sizes.
-      Find the one that fits your personal preferences.<p>
+    <h1>Different shapes and sizes</h1>
+    <p><span>Potato&trade;</span>comes in many different unique shapes and sizes.
+      Find the one that fits your personal preferences.</p>
+        <img src="assets/images/potato/2/potato2.png">
   </hgroup>
 </section>
 
 <!--PAGE THREE HEALTHY STARTS -->
 <section id="healthy">
-  <img scr="/assets/images/potato/3/bg.jpg">
   <hgroup>
     <h1>Is <span><p>Potato&trade;</p></span> healthy? Yes it is! </h1>
     <p>The majority of carbodydrates in potatoes are complex carbohydrates, your body's main energy source.</p>
+    <img src="assets/images/potato/3/potato2.png">
   </hgroup>
 <ul>
   <li>110 calories</li>
@@ -61,7 +62,7 @@
   <img scr="/assets/images/potato/4/bg.jpg">
   <hgroup>
     <h1>Easily Transformable</h1>
-    <p>Because of its unique structure, <span><p>Potato&trade</p></span>is easily usable
+    <p>Because of its unique structure, <span><p>Potato&trade;</p></span>is easily usable
       and transformable in any form you can think of.</p>
   </hgroup>
 
