fix CSS and markup

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
   </header>
     <div>
       <h1>"Sweet, Nutritious and Delicious"</h1>
-      <p>The key to happiness is hidden in the  <span>Potato&trade;</span>.</p>
+      <p>The key to happiness is hidden in the <span>Potato&trade;</span>.</p>
 <img src="assets/images/potato/1/potato1.png">
     </div>
   </section>
@@ -36,10 +36,10 @@
 <section id="shapes">
   <hgroup>
     <h1>Different shapes and sizes</h1>
-    <p><span>Potato&trade;</span>comes in many different unique shapes and sizes.
-      Find the one that fits your personal preferences.</p>
-        <img src="assets/images/potato/2/potato2.png">
+        <p><span>Potato&trade;</span> comes in many different unique shapes and sizes.
+          Find the one that fits your personal preferences.</p>
   </hgroup>
+  <img src="assets/images/potato/2/potato2.png">
 </section>
 
 <!--PAGE THREE HEALTHY STARTS -->
@@ -47,8 +47,8 @@
   <hgroup>
     <h1>Is <span><p>Potato&trade;</p></span> healthy? Yes it is! </h1>
     <p>The majority of carbodydrates in potatoes are complex carbohydrates, your body's main energy source.</p>
-    <img src="assets/images/potato/3/potato2.png">
   </hgroup>
+  <img src="assets/images/potato/3/potato2.png">
 <ul>
   <li>110 calories</li>
   <li>26g carbohydrates</li>
@@ -81,24 +81,25 @@
   <section id="order">
     <hgroup>
       <h1>Order one (or more) today!</h1>
-      <div><ul>
+      <div class="lite"><ul>
         <h2>Potato&trade; Lite</h2>
           <li>Small and compact</li>
           <li>Highly portable</li>
           <li>Unapologetically delicious</li>
-          <ul>
+        </ul>
             <div class rel="button" href="Order">
-            <p>starting at $9.99</p></div></div>
+            <small>starting at $9.99</small></div>
 <div><figure id="divider">
   <img src="/assets/images/potato/4/devider.png"></div>
-        <h2>Potato&trade; Pro</h2>
+        <div id="pro"><h2>Potato&trade; Pro</h2>
+          <ul>
           <li>Highly portable</li>
           <li>Easily sliceable</li>
           <li>Unapologetically delicious</li>
           <li>Highly nutritious</li>
-          <ul>
+          </ul>
             <div class rel="button" href="Order">
-            <p>starting at $19.99</p></div></div>
+            <small>starting at $19.99</small></div>
             <div><figure class="divider">
               <img src="/assets/images/potato/4/devider.png"></div>
               <div>
@@ -109,7 +110,7 @@
           <li>Very nutritious</li>
           <ul>
             <div class rel="button" href="Order">
-              <p>starting at $39.99</p></div></div>
+              <small>starting at $39.99</small></div></div>
     </hgroup>
 
     <!--FOOTER STARTS-->
