--- a/index.html
+++ b/index.html
@@ -25,31 +25,43 @@
       </ul>
     </nav>
   </header>
-    <div>
+    <hgroup>
       <h1>"Sweet, Nutritious and Delicious"</h1>
-      <p>The key to happiness is hidden in the <span>Potato&trade;</span>.</p>
-<img src="assets/images/potato/1/potato1.png">
-    </div>
+      <h2>The key to happiness is hidden in the <strong>Potato&trade;</strong>.</h2>
+    </hgroup>
+      <div class="figure">
+        <img src="assets/potatoassets2/potato1.png">
+      </div>
   </section>
 <!-- PAGE TWO SHAPES AND SIZES STARTS -->
 
 <section id="shapes">
   <hgroup>
     <h1>Different shapes and sizes</h1>
-        <p><span>Potato&trade;</span> comes in many different unique shapes and sizes.
-          Find the one that fits your personal preferences.</p>
+        <h2><strong>Potato&trade;</strong> comes in many different unique shapes and sizes.
+          Find the one that fits your personal preferences.</h2>
   </hgroup>
-  <img src="assets/images/potato/2/potato2.png">
+    <div id="potatoline">
+      <img scr="assets/potatoassets2/potatoline.png"
+    </div>
+    <div class="figure">
+      <img src="assets/potatoassets2/potato2.png">
+    </div>
 </section>
 
 <!--PAGE THREE HEALTHY STARTS -->
 <section id="healthy">
   <hgroup>
-    <h1>Is <span><p>Potato&trade;</p></span> healthy? Yes it is! </h1>
-    <p>The majority of carbodydrates in potatoes are complex carbohydrates, your body's main energy source.</p>
+    <h1>Is <strong>Potato&trade;</strong> healthy? Yes it is!</h1>
+    <h2>The majority of carbodydrates in potatoes are complex carbohydrates, your body's main energy source.</h2>
   </hgroup>
-  <img src="assets/images/potato/3/potato2.png">
-<ul>
+  <div class="figure">
+    <img src="assets/potatoassets2/potato-3.png">
+  </div>
+  <div id="taterblur">
+    <img scr="assets/potatoassets2/blur2.png">
+  </div>
+<ul id="stats">
   <li>110 calories</li>
   <li>26g carbohydrates</li>
   <li>3g protein</li>
@@ -59,38 +71,64 @@
 
 <!--PAGE FOUR EASY TRANSFORM STARTS-->
 <section id="transform">
-  <img scr="/assets/images/potato/4/bg.jpg">
   <hgroup>
     <h1>Easily Transformable</h1>
-    <p>Because of its unique structure, <span><p>Potato&trade;</p></span>is easily usable
-      and transformable in any form you can think of.</p>
+    <h2>Because of its unique structure, <strong>Potato&trade;</strong>is easily usable
+      and transformable in any form you can think of.</h2>
   </hgroup>
+  <div id="halftater">
+    <img src="/assets/potatoassets2/potato-3.png"
+  </div>
+  <div id="slider">
+    <img src="/assets/potatoassets2/devider.png">
+  </div>
+  <div id="chips">
+    <img src="/assets/potatoassets2/chips.png">
+  <div id=
+  <div id="mash">
+    <img src="/assets/potatoassets2/mash.png"?
+  </div>
+  <div id="fried">
+    <img src="assets/potatoassets2/fried.png">
+  </div>
 
 <!-- PAGE FIVE SATISFACTION START-->
 <section id="satisfaction">
   <hgroup>
     <h1>100% Customer satisfaction!</h1>
-    <blockquote><p>"I was a skeptic at first, but when I tried the Potato for the first time,
-       my life has completely changed! I'm a better person now. Everything is better with
-      the Potato&trade;."</p>
-    <footer>--Jane Doe, single mom</footer>
-  </blockquote>
   </hgroup>
+    <div id="focusleft">
+      <img src="/assets/potatoassets2/focusleft.PNG">
+    </div>
+      <blockquote>
+        </p>"I was a skeptic at first, but when I tried the Potato for the first time,
+        my life has completely changed! I'm a better person now. Everything is better with
+        the Potato."</p>
+      <div id="focusright">
+        <img src="/assets/potatoassets2/focusright.png">
+      </div>
+      <div id="thinborder">
+        <img src="/assets/potatoassets2/border.png">
+      </div>
+      <footer>Jane Doe, single mom</footer>
+    </blockquote>
+</section>
 
   <!--PAGE SIX ORDER PAGE-->
   <section id="order">
-    <hgroup>
       <h1>Order one (or more) today!</h1>
-      <div class="lite"><ul>
-        <h2>Potato&trade; Lite</h2>
+      <ul class="lite">
+        <h3><strong>Potato&trade;</strong> Lite</h3>
           <li>Small and compact</li>
           <li>Highly portable</li>
           <li>Unapologetically delicious</li>
         </ul>
             <div class rel="button" href="Order">
-            <small>starting at $9.99</small></div>
-<div><figure id="divider">
-  <img src="/assets/images/potato/4/devider.png"></div>
+            <small>starting at $9.99</small>
+          </div>
+<div>
+  <div class="divider">
+<img src="/assets/potatoassets2/devider.png"></div>
         <div id="pro"><h2>Potato&trade; Pro</h2>
           <ul>
           <li>Highly portable</li>
@@ -101,7 +139,7 @@
             <div class rel="button" href="Order">
             <small>starting at $19.99</small></div>
             <div><figure class="divider">
-              <img src="/assets/images/potato/4/devider.png"></div>
+              <img src="/assets/potatoassets2/devider.png"></div>
               <div>
         <h2>Potato&trade; Team</h2>
           <li>Ideal for bigger groups</li>
@@ -118,16 +156,45 @@
       <div><p>Since you came here to read this, have one IMAGE TK for free!
         Copyright 2015 Potato&trade All rights reserved.</p></div>
 <div>
-      <nav>
+  <ul class="pro">
+    <h3><strong>Potato&trade;</strong> Pro</h3>
+    <li>Highly portable</li>
+    <li>Easily sliceable</li>
+    <li>Unapologetically delicious</li>
+    <li>Highly nutritious</li>
+    </ul>
+        <div class rel="button" href="Order">
+        <small>starting at $19.99</small>
+      </div>
+<div>
+<div class="divider">
+<img src="/assets/potatoassets2/devider.png"></div>
+<div>
+  <ul class"team">
+    <h3><strong>Potato&trade;</strong> Team</h3>
+      <li>Ideal for bigger groups</li>
+      <li>Easily sliceable</li>
+      <li>Unapologetically delicious</li>
+      <li>Very nutritious</li>
+    </ul>
+        <div class rel="button" href="Order">
+          <small>starting at $39.99</small></div></div>
+<!--FOOTER STARTS-->
+<footer>
+<div>
+  <p>Since you came here to read this, have one IMAGE TK for free!
+    Copyright 2015 Potato&trade All rights reserved.</p>
+</div>
+  <nav>
       <ul>
         <li>History</li>
         <li>About</li>
         <li>Contact us</li>
         <li>Free Potato</li>
       </ul>
-    </nav>
-  </div>
+</nav>
   </footer>
+</section>
 <link rel="styles" href="js/script.js">
 </body>
 </html>
