--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en-us">
-<link rel="stylesheet" href="css/style.css">
+<link rel="stylesheet" href="/css/newstyle.css">
   <head>
   <meta charset="utf-8">
   <title>Potato</title>
@@ -30,7 +30,7 @@
       <h2>The key to happiness is hidden in the <strong>Potato&trade;</strong>.</h2>
     </hgroup>
       <div class="figure">
-        <img src="assets/potatoassets2/potato1.png">
+        <img src="assets/potatoassets-2/potato1.png">
       </div>
   </section>
 <!-- PAGE TWO SHAPES AND SIZES STARTS -->
@@ -42,10 +42,10 @@
           Find the one that fits your personal preferences.</h2>
   </hgroup>
     <div id="potatoline">
-      <img scr="assets/potatoassets2/potatoline.png"
+      <img scr="assets/potatoassets-2/potatoline.png"
     </div>
     <div class="figure">
-      <img src="assets/potatoassets2/potato2.png">
+      <img src="assets/potatoassets-2/potato2.png">
     </div>
 </section>
 
@@ -56,10 +56,10 @@
     <h2>The majority of carbodydrates in potatoes are complex carbohydrates, your body's main energy source.</h2>
   </hgroup>
   <div class="figure">
-    <img src="assets/potatoassets2/potato-3.png">
+    <img src="assets/potatoassets-2/potato-3.png">
   </div>
   <div id="taterblur">
-    <img scr="assets/potatoassets2/blur2.png">
+    <img scr="assets/potatoassets-2/blur2.png">
   </div>
 <ul id="stats">
   <li>110 calories</li>
@@ -77,19 +77,19 @@
       and transformable in any form you can think of.</h2>
   </hgroup>
   <div id="halftater">
-    <img src="/assets/potatoassets2/potato-3.png"
+    <img src="/assets/potatoassets-2/potato-3.png"
   </div>
   <div id="slider">
-    <img src="/assets/potatoassets2/devider.png">
+    <img src="/assets/potatoassets-2/devider.png">
   </div>
   <div id="chips">
-    <img src="/assets/potatoassets2/chips.png">
+    <img src="/assets/potatoassets-2/chips.png">
   <div id=
   <div id="mash">
-    <img src="/assets/potatoassets2/mash.png"?
+    <img src="/assets/potatoassets-2/mash.png"?
   </div>
   <div id="fried">
-    <img src="assets/potatoassets2/fried.png">
+    <img src="assets/potatoassets-2/fried.png">
   </div>
 
 <!-- PAGE FIVE SATISFACTION START-->
@@ -98,17 +98,17 @@
     <h1>100% Customer satisfaction!</h1>
   </hgroup>
     <div id="focusleft">
-      <img src="/assets/potatoassets2/focusleft.PNG">
+      <img src="/assets/potatoassets-2/focusleft.PNG">
     </div>
       <blockquote>
         </p>"I was a skeptic at first, but when I tried the Potato for the first time,
         my life has completely changed! I'm a better person now. Everything is better with
         the Potato."</p>
       <div id="focusright">
-        <img src="/assets/potatoassets2/focusright.png">
+        <img src="/assets/potatoassets-2/focusright.png">
       </div>
       <div id="thinborder">
-        <img src="/assets/potatoassets2/border.png">
+        <img src="/assets/potatoassets-2/border.png">
       </div>
       <footer>Jane Doe, single mom</footer>
     </blockquote>
@@ -117,73 +117,47 @@
   <!--PAGE SIX ORDER PAGE-->
   <section id="order">
       <h1>Order one (or more) today!</h1>
-      <ul class="lite">
+      <div class="container"
+      <div id="lite">
+        <ul>
         <h3><strong>Potato&trade;</strong> Lite</h3>
           <li>Small and compact</li>
           <li>Highly portable</li>
           <li>Unapologetically delicious</li>
         </ul>
-            <div class rel="button" href="Order">
+            <div class="button" href="#Order">
             <small>starting at $9.99</small>
           </div>
-<div>
-  <div class="divider">
-<img src="/assets/potatoassets2/devider.png"></div>
-        <div id="pro"><h2>Potato&trade; Pro</h2>
+        </div>
+      <div id="pro">
           <ul>
-          <li>Highly portable</li>
-          <li>Easily sliceable</li>
-          <li>Unapologetically delicious</li>
-          <li>Highly nutritious</li>
-          </ul>
-            <div class rel="button" href="Order">
+            <h3>Potato&trade; Pro</h3>
+              <li>Highly portable</li>
+              <li>Easily sliceable</li>
+              <li>Unapologetically delicious</li>
+              <li>Highly nutritious</li>
+            </ul>
+            <div class="button" href="#Order">
             <small>starting at $19.99</small></div>
-            <div><figure class="divider">
-              <img src="/assets/potatoassets2/devider.png"></div>
-              <div>
-        <h2>Potato&trade; Team</h2>
+          </div>
+      <div id="team">
+        <ul>
+          <h3>Potato&trade; Team</h3>
           <li>Ideal for bigger groups</li>
           <li>Easily sliceable</li>
           <li>Unapologetically delicious</li>
           <li>Very nutritious</li>
-          <ul>
-            <div class rel="button" href="Order">
-              <small>starting at $39.99</small></div></div>
-    </hgroup>
-
-    <!--FOOTER STARTS-->
-    <div><footer>
-      <div><p>Since you came here to read this, have one IMAGE TK for free!
-        Copyright 2015 Potato&trade All rights reserved.</p></div>
-<div>
-  <ul class="pro">
-    <h3><strong>Potato&trade;</strong> Pro</h3>
-    <li>Highly portable</li>
-    <li>Easily sliceable</li>
-    <li>Unapologetically delicious</li>
-    <li>Highly nutritious</li>
-    </ul>
-        <div class rel="button" href="Order">
-        <small>starting at $19.99</small>
+        </ul>
+            <div class="button" href="#Order">
+              <small>starting at $39.99</small>
+            </div>
       </div>
-<div>
-<div class="divider">
-<img src="/assets/potatoassets2/devider.png"></div>
-<div>
-  <ul class"team">
-    <h3><strong>Potato&trade;</strong> Team</h3>
-      <li>Ideal for bigger groups</li>
-      <li>Easily sliceable</li>
-      <li>Unapologetically delicious</li>
-      <li>Very nutritious</li>
-    </ul>
-        <div class rel="button" href="Order">
-          <small>starting at $39.99</small></div></div>
+</section>
 <!--FOOTER STARTS-->
 <footer>
 <div>
-  <p>Since you came here to read this, have one IMAGE TK for free!
-    Copyright 2015 Potato&trade All rights reserved.</p>
+  <p>Since you came here to read this, have one <strong>Potato&trade;</strong> for free!
+    Copyright 2015 Potato&trade; All rights reserved.</p>
 </div>
   <nav>
       <ul>
@@ -192,9 +166,8 @@
         <li>Contact us</li>
         <li>Free Potato</li>
       </ul>
-</nav>
-  </footer>
-</section>
+  </nav>
+</footer>
 <link rel="styles" href="js/script.js">
 </body>
 </html>
