--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
   <!-- ============= Header ============= -->
 <!-- HOME PAGE STARTS -->
   <section id="home">
+    <section class="clearfix">
     <header>
           <div id="logo">Potato&trade;</div>
     <nav>
@@ -32,11 +33,13 @@
       <div class="figure">
         <img src="assets/potatoassets-2/potato1.png">
       </div>
+    </section>
   </section>
 <!-- PAGE TWO SHAPES AND SIZES STARTS -->
 
 <section id="shapes">
-  <hgroup>
+  <section class="clearfix">
+    <hgroup>
     <h1>Different shapes and sizes</h1>
         <h2><strong>Potato&trade;</strong> comes in many different unique shapes and sizes.
           Find the one that fits your personal preferences.</h2>
@@ -47,10 +50,12 @@
     <div class="figure">
       <img src="assets/potatoassets-2/potato2.png">
     </div>
+  </section>
 </section>
 
 <!--PAGE THREE HEALTHY STARTS -->
 <section id="healthy">
+  <section class="clearfix">
   <hgroup>
     <h1>Is <strong>Potato&trade;</strong> healthy? Yes it is!</h1>
     <h2>The majority of carbodydrates in potatoes are complex carbohydrates, your body's main energy source.</h2>
@@ -68,9 +73,11 @@
   <li>0g fat</li>
 </ul>
 </section>
+</section>
 
 <!--PAGE FOUR EASY TRANSFORM STARTS-->
 <section id="transform">
+  <section class="clearfix">
   <hgroup>
     <h1>Easily Transformable</h1>
     <h2>Because of its unique structure, <strong>Potato&trade;</strong>is easily usable
@@ -91,9 +98,11 @@
   <div id="fried">
     <img src="assets/potatoassets-2/fried.png">
   </div>
-
+</section>
+</section>
 <!-- PAGE FIVE SATISFACTION START-->
 <section id="satisfaction">
+  <section class="clearfix">
   <hgroup>
     <h1>100% Customer satisfaction!</h1>
   </hgroup>
@@ -112,10 +121,12 @@
       </div>
       <footer>Jane Doe, single mom</footer>
     </blockquote>
+  </section>
 </section>
 
   <!--PAGE SIX ORDER PAGE-->
   <section id="order">
+    <section class="clearfix">
       <h1>Order one (or more) today!</h1>
       <div class="container"
       <div id="lite">
@@ -152,9 +163,11 @@
               <small>starting at $39.99</small>
             </div>
       </div>
+    </section>
 </section>
 <!--FOOTER STARTS-->
 <footer>
+  <section class="clearfix">
 <div>
   <p>Since you came here to read this, have one <strong>Potato&trade;</strong> for free!
     Copyright 2015 Potato&trade; All rights reserved.</p>
@@ -167,6 +180,7 @@
         <li>Free Potato</li>
       </ul>
   </nav>
+</section>
 </footer>
 <link rel="styles" href="js/script.js">
 </body>
