streamline html and css for flexbox

--- a/index.html
+++ b/index.html
@@ -12,9 +12,8 @@
   <!-- ============= Header ============= -->
 <!-- HOME PAGE STARTS -->
   <section id="home">
-    <section class="clearfix">
     <header>
-          <div id="logo">Potato&trade;</div>
+          <h1 id="logo">Potato&trade;</h1>
     <nav>
       <ul>
         <li><a href="#Home">Home</a></li>
@@ -26,64 +25,48 @@
       </ul>
     </nav>
   </header>
-    <hgroup>
+    <div class="mainitems">
       <h1>"Sweet, Nutritious and Delicious"</h1>
       <h2>The key to happiness is hidden in the <strong>Potato&trade;</strong>.</h2>
-    </hgroup>
-      <div class="figure">
         <img src="assets/potatoassets-2/potato1.png">
-      </div>
-    </section>
+    </div>
   </section>
 <!-- PAGE TWO SHAPES AND SIZES STARTS -->
 
 <section id="shapes">
-  <section class="clearfix">
-    <hgroup>
-    <h1>Different shapes and sizes</h1>
-        <h2><strong>Potato&trade;</strong> comes in many different unique shapes and sizes.
+    <div class="mainitems">
+      <h1>Different shapes and sizes</h1>
+        <h2><strong>Potato&trade;</strong> comes in many different unique shapes and sizes.<br>
           Find the one that fits your personal preferences.</h2>
-  </hgroup>
-    <div id="potatoline">
       <img scr="assets/potatoassets-2/potatoline.png"
-    </div>
-    <div class="figure">
       <img src="assets/potatoassets-2/potato2.png">
     </div>
-  </section>
 </section>
-
 <!--PAGE THREE HEALTHY STARTS -->
 <section id="healthy">
-  <section class="clearfix">
-  <hgroup>
-    <h1>Is <strong>Potato&trade;</strong> healthy? Yes it is!</h1>
-    <h2>The majority of carbodydrates in potatoes are complex carbohydrates, your body's main energy source.</h2>
-  </hgroup>
-  <div class="figure">
+    <div class="mainitems">
+      <h1>Is <strong>Potato&trade;</strong> healthy? Yes it is!</h1>
+      <h2>The majority of carbodydrates in potatoes<br> are complex carbohydrates, your body's main energy source.</h2>
     <img src="assets/potatoassets-2/potato-3.png">
-  </div>
-  <div id="taterblur">
     <img scr="assets/potatoassets-2/blur2.png">
-  </div>
 <ul id="stats">
-  <li>110 calories</li>
-  <li>26g carbohydrates</li>
-  <li>3g protein</li>
-  <li>0g fat</li>
+  <li><h2>110</h2> calories</li>
+  <li><h2>26g</h2> carbohydrates</li>
+  <li><h2>3g</h2> protein</li>
+  <li><h2>0g</h2> fat</li>
 </ul>
-</section>
+</div>
 </section>
 
 <!--PAGE FOUR EASY TRANSFORM STARTS-->
 <section id="transform">
-  <section class="clearfix">
-  <hgroup>
+    <div class="mainitems">
     <h1>Easily Transformable</h1>
-    <h2>Because of its unique structure, <strong>Potato&trade;</strong>is easily usable
+    <h2>Because of its unique structure, <strong>Potato&trade;</strong>is <br>easily usable
       and transformable in any form you can think of.</h2>
-  </hgroup>
-  <div id="halftater">
+    </div>
+  <section id="transwrapper">
+    <div id="halftater">
     <img src="/assets/potatoassets-2/potato-3.png"
   </div>
   <div id="slider">
@@ -97,36 +80,27 @@
   </div>
   <div id="fried">
     <img src="assets/potatoassets-2/fried.png">
-  </div>
+</div>
 </section>
 </section>
 <!-- PAGE FIVE SATISFACTION START-->
 <section id="satisfaction">
-  <section class="clearfix">
-  <hgroup>
-    <h1>100% Customer satisfaction!</h1>
-  </hgroup>
-    <div id="focusleft">
-      <img src="/assets/potatoassets-2/focusleft.PNG">
-    </div>
+    <div class="mainitems">
+      <h1>100% Customer satisfaction!</h1>
+    <div id="wrapper">
       <blockquote>
+      </p>"A thing that comes out of the ground that solves all my carbohydrate needs and also my love of fried foods? Holy cow, sign me up immediately!"</p>
         </p>"I was a skeptic at first, but when I tried the Potato for the first time,
         my life has completely changed! I'm a better person now. Everything is better with
         the Potato."</p>
-      <div id="focusright">
-        <img src="/assets/potatoassets-2/focusright.png">
-      </div>
-      <div id="thinborder">
-        <img src="/assets/potatoassets-2/border.png">
-      </div>
-      <footer>Jane Doe, single mom</footer>
+      <footer><strong>Jane Doe</strong>, single mom</footer>
+      </p>"The first time I had Potato at the beach, all fried up and sprinkled with vinegar, I knew my life was complete. I can die now."</p>
     </blockquote>
-  </section>
+  </div>
 </section>
 
   <!--PAGE SIX ORDER PAGE-->
   <section id="order">
-    <section class="clearfix">
       <h1>Order one (or more) today!</h1>
       <div class="container"
       <div id="lite">
@@ -163,11 +137,9 @@
               <small>starting at $39.99</small>
             </div>
       </div>
-    </section>
 </section>
 <!--FOOTER STARTS-->
 <footer>
-  <section class="clearfix">
 <div>
   <p>Since you came here to read this, have one <strong>Potato&trade;</strong> for free!
     Copyright 2015 Potato&trade; All rights reserved.</p>
