remove extra divs from HTML

--- a/index.html
+++ b/index.html
@@ -74,13 +74,7 @@
   </div>
   <div id="chips">
     <img src="/assets/potatoassets-2/chips.png">
-  <div id=
-  <div id="mash">
-    <img src="/assets/potatoassets-2/mash.png"?
   </div>
-  <div id="fried">
-    <img src="assets/potatoassets-2/fried.png">
-</div>
 </section>
 </section>
 <!-- PAGE FIVE SATISFACTION START-->
@@ -103,8 +97,7 @@
   <section id="order">
       <h1>Order one (or more) today!</h1>
       <div class="container"
-      <div id="lite">
-        <ul>
+        <ul id="lite">
         <h3><strong>Potato&trade;</strong> Lite</h3>
           <li>Small and compact</li>
           <li>Highly portable</li>
@@ -113,9 +106,7 @@
             <div class="button" href="#Order">
             <small>starting at $9.99</small>
           </div>
-        </div>
-      <div id="pro">
-          <ul>
+      <ul id="pro">
             <h3>Potato&trade; Pro</h3>
               <li>Highly portable</li>
               <li>Easily sliceable</li>
@@ -125,8 +116,7 @@
             <div class="button" href="#Order">
             <small>starting at $19.99</small></div>
           </div>
-      <div id="team">
-        <ul>
+      <ul id="team">
           <h3>Potato&trade; Team</h3>
           <li>Ideal for bigger groups</li>
           <li>Easily sliceable</li>
